@@ -1,4 +1,6 @@
 0.4.4:
+Sam Lantinga - Wed Apr 18 17:07:40 PDT 2001
+ * Added a check for the socklen_t type (thanks Michael Pruett)
 Sam Lantinga - Mon Apr 16 14:20:07 PDT 2001
  * Fixed crash with incorrectly encoded macroblock sequences
 Mo DeJong - Mon Apr 16 12:26:04 PDT 2001
